tests/baselines/reference/getJavaScriptSyntacticDiagnostics14.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics14.ts':
/tests/cases/fourslash/a.js(1,5): error TS8011: Type arguments can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    Foo<number>();
        ~~~~~~
!!! error TS8011: Type arguments can only be used in TypeScript files.